wxc/include/ewxw/wxc_glue.h

/* wxScrollBar */
TClassDefExtend(wxScrollBar,wxControl)
TClass(wxScrollBar) wxScrollBar_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );
int        wxScrollBar_GetPageSize( TSelf(wxScrollBar) _obj );
int        wxScrollBar_GetRange( TSelf(wxScrollBar) _obj );
int        wxScrollBar_GetThumbPosition( TSelf(wxScrollBar) _obj );
int        wxScrollBar_GetThumbSize( TSelf(wxScrollBar) _obj );
void       wxScrollBar_SetScrollbar( TSelf(wxScrollBar) _obj, int position, int thumbSize, int range, int pageSize, TBool refresh );
void       wxScrollBar_SetThumbPosition( TSelf(wxScrollBar) _obj, int viewStart );